addition of create attendance rule
