# src/services/attendance/routes.ts
@@ -1,5 +1,5 @@
 import { Request, Response } from "express";
-import { getAttendances, createAttendance } from "./AttendanceController";
+import { getAttendances, createAttendance, deleteAttendance } from "./AttendanceController";
 import { checkSearchIntervalParams } from "../../middleware/checkInterval";
 import { Attendance } from "../../models/attendance.model";
 
@@ -8,7 +8,7 @@ export default [
     path: "/api/v1/attendance",
     method: "get",
     handler: async (req : Request, res: Response) => {
-       res.status(200).send(getAttendances());
+       res.status(200).send();
     }
   },
   {
@@ -18,5 +18,11 @@ export default [
        res.status(200).send(createAttendance(req.body as Attendance));
     }
   },
-
+  {
+    path: "/api/v1/attendance/:id",
+    method: "delete",
+    handler: async ({params} : Request, res: Response) => {
+       res.status(200).send(deleteAttendance(parseInt(params['id'])));
+    }
+  }
 ];
